# nxt-rmt

./: .gitignore
nxt-remote/: CHANGELOG.md  README.md  cabal.project  nxt-remote.cabal
nxt-remote-web/: package-lock.json  package.json  spago.dhall
nxt-remote-web/src/: Main.purs
nxt-remote-web/src/App/: Control.purs
nxt-remote/app/server/: App.hs  Control.hs
nxt-remote/scripts/: backward.sh  forward.sh  steerToLeft.sh  steerToRight.sh  stop.sh
