cabal-version:      2.4
name:               nxt-remote
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         j.platon@tu-bs.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable nxt-sample
  main-is:          Main.hs

    -- Modules included in this executable, other than Main.


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

  Default-language:    Haskell2010
  Build-depends:       base >= 4.3 && < 5,
                       mtl >= 1.1 && < 3,
                       bytestring >= 0.9 && < 1,
                       time >= 1.1 && < 2,
                       serialport >= 0.4.3 && < 1,
                       unix <= 2.7.3 && >= 2.7.0,
                       filepath <=1.4.2.1 && >=1.4.1.2,
                       lifted-base <= 0.2.3.12 && >= 0.2.3.10,
                       monad-control <= 1.0.2.3 && >= 1.0.2.0,
                       transformers-base <= 0.4.6 && >= 0.4.5,
                       servant <= 0.19.1 && >= 0.19,
                       servant-server >=0.14 && <0.19,
                       warp >=3.2 && <3.4,
                       wai-cors  >= 0.2.6 && >=0.2.7,
                       text,
                       NXT,
                       servant-websockets,
                       websockets
  other-modules:       
                       App
                     , Control
  hs-source-dirs:   app
                 , app/Robotics
                 , app/Robotics/NXT
                 , app/Robotics/NXT/Sensor
                 , app/server
  default-language: Haskell2010
  

